--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <div class="videobox">
                         <a href="#" title="Visita este canal!!!" target="_blank">
-                          <video src="recursos/video.mp4" width="200px" class="video" controls></video>       
+                                <img src="recursos/pianoxd.png" class="video" width="1s00px">       
                         </a>   
                 </div>
 
